
List of major changes and improvements between releases
=======================================================

Yosys 0.33 .. Yosys 0.34-dev
--------------------------

Yosys 0.32 .. Yosys 0.33
--------------------------
 * Various
    - Added "$print" cell, produced by "$display" and "$write"
      Verilog tasks.
    - Added "$print" cell handling in CXXRTL.

 * Lattice FPGA support
    - Added generic "synth_lattice" pass (for now MachXO2/XO3/XO3D)
    - Removed "synth_machxo2" pass
    - Pass "ecp5_gsr" renamed to "lattice_gsr"
    - "synth_machxo2" equivalent is "synth_lattice -family xo2"

Yosys 0.31 .. Yosys 0.32
--------------------------
 * Verific support
    - Added sub option "-lib" to reading commands for VHDL and
      SystemVerilog, that will later import all units/modules from
      marked files as blackboxes.

 * Various
    - Added support for $lt, $le, $gt, $ge to the code generating AIGs.

Yosys 0.30 .. Yosys 0.31
--------------------------
 * New commands and options
    - Added option "-lsbidx" to "write_edif" pass.

 * Various
    - Added support for $divfloor operator to cxxrtl backend.
    - dfflegalize: allow setting mince and minsrst args from scratchpad.

Yosys 0.29 .. Yosys 0.30
--------------------------
 * New commands and options
    - Added "recover_names" pass to recover names post-mapping.

 * Gowin support
    - Added remaining primitives blackboxes.

 * Various
    - "show -colorattr" will now color the cells, wires, and 
      connection arrows.
    - "show -viewer none" will not execute viewer.

Yosys 0.28 .. Yosys 0.29
--------------------------
 * New commands and options
    - Added "synthprop" pass for synthesizable properties.

 * Verific support
    - Handle conditions on clocked concurrent assertions in unclocked
      procedural contexts.

 * Verilog
    - Fix const eval of unbased unsized constants.
    - Handling of attributes for struct / union variables.

Yosys 0.27 .. Yosys 0.28
--------------------------